traces/bug_162.txt
src/medit/path.c:128: error: DEAD_STORE
  The value written to &nbp (type int) is never used.
Showing all 1 steps of the trace


src/medit/path.c:128:5: Write of unused value
126.       nbp = sc->path.np;
127.     else
128.       nbp = (sc->path.sec*IMG_PER_SEC);
           ^
129.   }
130.   
